2006-09-26  Kevin Kenny  <kennykb@acm.org>

	* doc/Encoding.3:        Added covariant 'const' qualifier for the
	* generic/tcl.decls:     Tcl_EncodingType argument to
	* generic/tclEncoding.c: Tcl_CreateEncoding. [Further TIP#27 work.]
	* generic/tclDecls.h:    Reran 'make genstubs'.
	
2006-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Additional compiler flags and amd64 support.
	* win/nmakehlp.c:
	* win/rules.vc:

2006-09-26  Don Porter  <dgp@users.sourceforge.net>

        * generic/tcl.h:        As 2006-09-22 commit from Donal K. Fellows
        demonstrates, "#define NULL 0" is just wrong, and as a quotable chat
        figure observed, "If NULL isn't defined, we're not using a C compiler."
        Improper fallback definition of NULL removed.

2006-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tcl.h:        More fixing which struct stat to refer to.
	* generic/tclGetDate.y: Some casts from time_t to int required.
	* generic/tclTimer.c:   Tcl_Time structure members are longs.
	* win/makefile.vc:      Support for varying compiler options
	* win/rules.vc:         and build to platform-specific subdirs.

2006-09-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_StackChannel): Fixed [SF Tcl Bug 1564642],
	  aka coverity #51. Extended loop condition, added checking for
	  NULL to prevent seg.fault.

2006-09-25  Andreas Kupries  <andreask@activestate.com>

	* doc/package.n: Fixed nits reported by Daniel Steffen in the
	  TIP#268 changes.

2006-09-25  Kevin B. Kenny   <kennykb@acm.org>

	* generic/tclNotify.c (Tcl_DeleteEvents): Simplified the code in
	hopes of making the invariants clearer and proving to Coverity
	that the event queue memory is managed correctly.
	
2006-09-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclNotify.c (Tcl_DeleteEvents): Make it clear what happens
	when the event queue is mismanaged. [Bug 1564677], coverity bug #10.
