@@ -1894,12 +1894,17 @@ TclGlob(
 	int objc, i;
 	Tcl_Obj **objv;
 	int prefixLen;
+	CONST char *pre;
 
 	/*
 	 * If this length has never been set, set it here.
 	 */
 
-	CONST char *pre = Tcl_GetStringFromObj(pathPrefix, &prefixLen);
+	if (pathPrefix == NULL) {
+	    Tcl_Panic("Called TclGlob with TCL_GLOBMODE_TAILS and pathPrefix==NULL");
+	}
+	
+	pre = Tcl_GetStringFromObj(pathPrefix, &prefixLen);
 	if (prefixLen > 0
 		&& (strchr(separators, pre[prefixLen-1]) == NULL)) {
 	    /*
